# dbt-fabric

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  cloudflare_pages.sh  dev_requirements.txt  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.py  test.env.sample  zensical.toml
.github/: CI.Dockerfile  FUNDING.yml  dependabot.yml  pull_request_description.md
.github/prompts/: plan-migrateToMssqlPythonV2.prompt.md
.github/workflows/: dependabot_automerge.yml  integration-tests-azure.yml  integration-tests-weekly.yml  integration-tests.yml  lint-format.yml  nightly-build.yml  publish-docker.yml  regular-integration-tests.yml  release-version.yml  unit-tests.yml  weekly-integration-tests.yml
dbt/adapters/fabric/: __init__.py  __version__.py  driver_backend.py  fabric_adapter.py  fabric_column.py  fabric_configs.py  fabric_connection_manager.py  fabric_credentials.py  fabric_relation.py  warehouse_snapshots.py
dbt/adapters/fabric/relation_configs/: base.py  policies.py
docs/: authentication.md  catalog-stats.md  cluster-by.md  compatibility.md  configuration.md  feature-comparison.md  index.md  installation.md  openrowset.md  python-models.md  warehouse-snapshots.md
docs_build/: cloudflare_pages.sh
overrides/partials/integrations/analytics/: custom.html
src/dbt/adapters/fabric/: __init__.py  base_connection_manager.py  base_credentials.py  base_fabric_adapter.py  fabric_adapter.py  fabric_api_client.py  fabric_column.py  fabric_configs.py  fabric_connection_manager.py  fabric_credentials.py  fabric_livy_helper.py  fabric_livy_session.py  fabric_relation.py  fabric_token_provider.py
src/dbt/adapters/fabricspark/: __init__.py  __version__.py  fabricspark_adapter.py  fabricspark_column.py  fabricspark_connection.py  fabricspark_connection_manager.py  fabricspark_credentials.py  fabricspark_cursor.py  fabricspark_relation.py
src/dbt/include/fabricspark/: dbt_project.yml
test/: pyvenv.cfg
tests/: conftest.py  isolated_items.py  test_proj_info.py
tests/fabric/adapter/: test_aliases.py  test_basic.py  test_catalog.py  test_catalog_columns.py  test_cluster_by.py  test_dbt_clone.py  test_dbt_debug.py  test_empty.py  test_list_relations_without_caching.py  test_python_model.py  test_query_comment.py  test_relations.py  test_rows_affected.py  test_sample_mode.py  test_schema.py  test_simple_copy.py  test_simple_seed.py  test_simple_snapshot.py  test_snapshot_new_record_mode.py  test_sources.py  test_split_part.py  test_store_test_failures.py  test_timing.py  test_warehouse_snapshots.py
tests/fabric/adapter/utils/: test_array_functions.py  test_cast.py  test_current_timestamp.py  test_date_trunc.py  test_dateadd.py  test_datediff.py  test_escape_single_quotes.py  test_generate_series.py  test_last_day.py  test_listagg.py  test_position.py  test_replace.py  test_source_freshness_custom_info.py  test_split_part.py  test_validate_sql.py
tests/fabricspark/adapter/: test_aliases.py  test_basic.py  test_caching.py  test_catalog.py  test_column_types.py  test_concurrency.py  test_constraints.py  test_dbt_clone.py  test_dbt_debug.py  test_dbt_show.py  test_empty.py  test_ephemeral.py  test_functions.py  test_grants.py  test_hooks.py  test_incremental.py  test_persist_docs.py  test_python_model.py  test_query_comment.py  test_relations.py  test_sample_mode.py  test_simple_copy.py  test_simple_seed.py  test_simple_snapshot.py  test_store_test_failures.py  test_unit_testing.py
tests/fabricspark/adapter/utils/: test_any_value.py  test_array_functions.py  test_bool_or.py  test_cast.py  test_concat.py  test_current_timestamp.py  test_data_types.py  test_date.py  test_date_spine.py  test_date_trunc.py  test_dateadd.py  test_datediff.py  test_equals.py  test_escape_single_quotes.py  test_except.py  test_generate_series.py  test_get_intervals_between.py  test_get_powers_of_two.py  test_hash.py  test_intersect.py  test_last_day.py  test_length.py  test_listagg.py  test_null_compare.py  test_position.py  test_replace.py  test_right.py  test_source_freshness_custom_info.py  test_split_part.py  test_string_literal.py  test_timestamps.py  test_validate_sql.py
tests/functional/adapter/: test_basic.py  test_caching.py  test_catalog.py  test_changing_relation_type.py  test_cluster_by.py  test_column_types.py  test_constraints.py  test_dbt_clone.py  test_dbt_show.py  test_debug.py  test_empty.py  test_ephemeral.py  test_functions.py  test_grants.py  test_hooks.py  test_incremental.py  test_incremental_merge_delete.py  test_incremental_microbatch.py  test_list_relations_without_caching.py  test_openrowset.py  test_persist_docs.py  test_python_model.py  test_query_comment.py  test_quoting.py  test_relation_types.py  test_relations.py  test_sample_mode.py  test_schema.py  test_seed.py  test_simple.py  test_simple_copy.py  test_simple_seed.py  test_simple_snapshot.py  test_snapshot_configs.py  test_snapshot_new_record_mode.py  test_snpashot_configs.py  test_sources.py  test_store_test_failures.py  test_timestamps.py  test_unit_testing.py  (+2 more)
tests/functional/adapter/data/: seed_model.sql  seed_run.sql
tests/functional/adapter/utils/: test_any_value.py  test_array_functions.py  test_array_utils.py  test_base_utils.py  test_bool_or.py  test_cast.py  test_concat.py  test_current_timestamp.py  test_data_types.py  test_date.py  test_date_spine.py  test_date_trunc.py  test_dateadd.py  test_datediff.py  test_escape_single_quotes.py  test_except.py  test_generate_series.py  test_get_intervals_between.py  test_get_powers_of_two.py  test_hash.py  test_intersect.py  test_last_day.py  test_length.py  test_listagg.py  test_position.py  test_replace.py  test_right.py  test_source_freshness_custom_info.py  test_split_part.py  test_string_literal.py  test_timestamps.py  test_validate_sql.py
tests/unit/adapters/fabric/: test_concurrency_mitigations.py  test_driver_backend.py  test_execute_rows_affected.py  test_fabric_column.py  test_fabric_connection_manager.py  test_fabric_credentials.py  test_fabric_relation.py  test_sql_server_connection_manager.py  (+1 more)
(+124 files in other folders)
