[project]
name = "dbt-fabric-samdebruyn"
dynamic = ["version"]
description = "A Microsoft Fabric Synapse Data Warehouse adapter plugin for dbt"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Pradeep Srikakolapu"}
]
requires-python = ">=3.9,<3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

dependencies = [
    "pyodbc>=4.0.35",
    "azure-identity>=1.12.0",
    "dbt-common>=1.0.4,<2.0",
    "dbt-adapters>=1.1.1,<2.0",
]

[dependency-groups]
dev = [
    # Testing
    "pytest==8.3.5",
    "pytest-dotenv==0.5.2",
    "flaky==3.8.1",
    "pytest-xdist==3.6.1",
    "dbt-core==1.9.3",
    "dbt-tests-adapter==1.11.0",
    # Linting & formatting
    "ruff==0.11.2",
]

[project.urls]
"Setup & configuration" = "https://docs.getdbt.com/reference/warehouse-profiles/fabric-profile"
"Documentation & usage" = "https://docs.getdbt.com/reference/resource-configs/fabric-configs"
"Changelog" = "https://github.com/microsoft/dbt-fabric/releases"
"Issue Tracker" = "https://github.com/microsoft/dbt-fabric/issues"
Homepage = "https://github.com/microsoft/dbt-fabric"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/dbt/adapters/fabric/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt/adapters", "src/dbt/include"]
sources = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*datetime.datetime.utcnow.*:DeprecationWarning", # https://github.com/dbt-labs/dbt-core/issues/9791
]
env_files = ["test.env"]
testpaths = ["tests/unit", "tests/functional"]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = [
    "I",   # isort
    "ERA", # no commented code
]

[tool.ruff.lint.isort]
known-first-party = ["dbt", "tests"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "PLR0913"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
