[project]
name = "dbt-fabric-samdebruyn"
dynamic = ["version"]
description = "A Microsoft Fabric Synapse Data Warehouse adapter plugin for dbt"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Sam Debruyn"}
]
requires-python = ">=3.11,<3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

dependencies = [
    "mssql-python>=1.4.0",
    "azure-identity>=1.12.0",
    "dbt-common>=1.37.2,<2.0",
    "dbt-adapters>=1.22.6,<2.0",
    "requests>=2.32.3",
]

[project.optional-dependencies]
spark = [
    "dbt-spark>=1.10.1",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=9.0.2",
    "pytest-dotenv>=0.5.2",
    "dbt-core>=1.9.6,<1.12.0",
    "dbt-tests-adapter>=1.19.6,<2.0",
    # Linting & formatting
    "ruff>=0.15.1"
]
docs = [
    "zensical>=0.0.41",
]

[project.urls]
"Documentation" = "http://dbt-fabric.debruyn.dev/"
"Changelog" = "https://github.com/sdebruyn/dbt-fabric/releases"
"Issue Tracker" = "https://github.com/sdebruyn/dbt-fabric/issues"
Homepage = "https://github.com/sdebruyn/dbt-fabric"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/dbt/adapters/fabric/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt/adapters", "src/dbt/include"]
sources = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*datetime.datetime.utcnow.*:DeprecationWarning", # https://github.com/dbt-labs/dbt-core/issues/9791
]
env_files = ["test.env"]
testpaths = ["tests/unit", "tests/fabric", "tests/fabricspark"]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = [
    "I",   # isort
    "ERA", # no commented code
]

[tool.ruff.lint.isort]
known-first-party = ["dbt", "tests"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "PLR0913"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
